source/blender/blenkernel/intern/particle_system.c
@@ -56,6 +56,7 @@
 #include "BLI_task.h"
 #include "BLI_threads.h"
 #include "BLI_linklist.h"
+#include "BLI_string_utils.h"
 
 #include "BKE_animsys.h"
 #include "BKE_boids.h"
@@ -184,6 +185,12 @@ void psys_reset(ParticleSystem *psys, int mode)
 	}
 
 	psys->tot_fluidsprings = psys->alloc_fluidsprings = 0;
+}
+
+void psys_unique_name(Object *object, ParticleSystem *psys, const char *defname)
+{
+	BLI_uniquename(&object->particlesystem, psys, defname, '.',
+	    offsetof(ParticleSystem, name), sizeof(psys->name));
 }
 
 static void realloc_particles(ParticleSimulationData *sim, int new_totpart)
